Correctly align technology list inside toolbar in the wizard page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7434,12 +7434,12 @@ div.selected-treatments button#save_polygon {
 }
 
 div.selected-treatments {
+  flex: 1;
   width: 80%;
-  margin: auto;
-  padding: 20px;
   background: transparent;
   border-radius: 15px;
-  height: 7em;
+  height: 100%;
+  padding-top: 10px;
 }
 div.selected-treatments ul {
   visibility: visible;
@@ -7447,7 +7447,8 @@ div.selected-treatments ul {
   list-style-type: none;
 }
 div.selected-treatments ul li.technology {
-  width: 6em;
+  width: 4em;
+  margin-left: 5px;
 }
 div.selected-treatments ul li.technology img {
   width: 5em;
@@ -7464,13 +7465,23 @@ nav.toolbar {
   position: absolute;
   top: 0;
   right: 0;
+
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+  width: 100%;
+  height: 70px;
+  padding-left: 100px;
 }
 nav.toolbar .tool {
   visibility: visible;
   pointer-events: auto;
   float: right;
   display: flex;
+  flex: 1;
+  min-width: 360px;
   align-items: flex-start;
+  justify-content: flex-end;
 }
 nav.toolbar .tool .darktool {
   background: #0064C7;
